--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,26 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
+    implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    implementation 'org.hamcrest:hamcrest-all:1.3'
+    implementation 'org.slf4j:slf4j-log4j12:1.7.26'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    //Junit
+    implementation group: 'io.github.artsok', name: 'rerunner-jupiter', version: '1.1.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+    testCompile 'org.junit.platform:junit-platform-runner:1.4.2'
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+    //Allure
+    implementation group: 'io.qameta.allure', name: 'allure-junit5', version: allureVersion
 }
+//allure {
+//    version = allureVersion
+//    autoconfigure = false
+//    aspectjweaver = true
+//    aspectjVersion = aspectjVersion
+//
+//    useJUnit5 {
+//        version = allureVersion
+//    }
+//}
