--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 *.iml
 .idea/*
+.settings/
+log4j-applicationErrors.log
+log4j-application.log
