--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
     implementation 'org.hamcrest:hamcrest-all:1.3'
     implementation 'org.slf4j:slf4j-log4j12:1.7.26'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     //Junit
