--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     implementation 'org.hamcrest:hamcrest-all:1.3'
     implementation 'org.slf4j:slf4j-log4j12:1.7.26'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compile group:  'one.util', name: 'streamex', version: '0.7.2'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '6.3'
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     //Junit
